[package]
name = "form_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }
#hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.1.2" }
rand = "0.8.5"

[profile.release]
lto = true
opt-level = "z"
